review comments #2